font-awesome ikoneita

--- a/src/main/webapp/html/partials/organisaatioSelector.html
+++ b/src/main/webapp/html/partials/organisaatioSelector.html
@@ -19,7 +19,7 @@
 
 
 <div ng-controller="OrganisaatioTreeController">
-    <button type="button" class="button small" ng-model="orgSelector" ng-show="!orgSelector" ng-click="show()">Lisää organisaatio</button>
+    <button type="button" class="button small" ng-model="orgSelector" ng-show="!orgSelector" ng-click="show()"><i class="fa fa-plus"></i> Organisaatio</button>
     <div  ng-show="orgSelector">
     <div class="modal-backdrop" ng-click="close()"></div>
 
