juhon ja jussin css-muutokset lisäilty sasseihin

--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1458,7 +1458,8 @@ label, .label {
     background-size: 1em; }
   .virkailija-table-1 input, .virkailija-table-1 select {
     position: relative;
-    bottom: 2px; }
+    bottom: 2px;
+    line-height: normal; }
   .virkailija-table-1 td.leftorientedcolumn {
     text-align: left; }
 
@@ -1638,7 +1639,7 @@ table.dropmenu-table {
   display: block; }
 
 /*
-	Taulukko tyyli perustietojen näyttämiselle, esim. hakijan henkilötietot
+	Taulukko tyyli perustietojen nï¿½yttï¿½miselle, esim. hakijan henkilï¿½tietot
 */
 .perustieto-table {
   width: 100%; }
@@ -2019,6 +2020,22 @@ button.edit-link {
     text-decoration: underline;
     font-weight: bold; }
 
+.btn-default {
+  color: black;
+  background-color: #9fdbf0;
+  border-color: #9fdbf0; }
+  .btn-default:hover {
+    background-color: #92cce0;
+    border-color: #92cce0; }
+
+.btn-primary {
+  color: black;
+  background-color: #feba00;
+  border-color: #feba00; }
+  .btn-primary:hover {
+    background-color: #dea300;
+    border-color: #dea300; }
+
 /*** Spinner
 ************************************************/
 .spinner {
@@ -2041,7 +2058,7 @@ button.edit-link {
   width: 100%;
   height: 100%; }
 
-.modal {
+.old-modal {
   position: absolute;
   line-height: 20px;
   background: white;
@@ -2054,7 +2071,7 @@ button.edit-link {
   -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   z-index: 10050; }
-  .modal .modal-header {
+  .old-modal .modal-header {
     border-bottom: 1px solid #ccc;
     height: 30px;
     background-image: url(../img/texture-45dg-lines-eeeeee.gif);
@@ -2064,7 +2081,7 @@ button.edit-link {
     font-weight: bold;
     text-align: left;
     padding-left: 10px; }
-    .modal .modal-header .close {
+    .old-modal .modal-header .close {
       background-image: url(../img/popup-close-icon.png);
       cursor: pointer;
       width: 16px;
@@ -2072,7 +2089,7 @@ button.edit-link {
       position: absolute;
       right: 7px;
       top: 7px; }
-  .modal .modal-content {
+  .old-modal .modal-content {
     padding: 10px 20px 10px 10px; }
 
 /*** Pagination
