Monikielinen hylkäysperustekuvaus arvokonvertterille myös UI:hin (VT-589)

--- a/src/main/webapp/css/other.css
+++ b/src/main/webapp/css/other.css
@@ -216,4 +216,11 @@
     color: #AAAAAA;
 }
 
+.arvokonvertteri-form {
+    background-color: rgb(242, 242, 242);
+    padding: 10px;
+    border-radius: 3px;
+    margin-bottom: 10px;
+}
+
 
