--- a/src/main/webapp/css/other.css
+++ b/src/main/webapp/css/other.css
@@ -216,11 +216,19 @@
     color: #AAAAAA;
 }
 
-.arvokonvertteri-form {
+.arvokonvertteri-form, .arvovalikonvertteri-form {
     background-color: rgb(242, 242, 242);
     padding: 10px;
     border-radius: 3px;
     margin-bottom: 10px;
+}
+
+.right-align {
+    text-align: right;
+}
+
+.center-align {
+    text-align: center;
 }
 
 
