--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1692,40 +1692,65 @@ table.dropmenu-table {
       margin: 0px;
       border-width: 0px; }
 
-.btn.print {
-  padding-left: 30px;
-  background-image: url(../img/print-icon.png);
-  background-repeat: no-repeat;
-  background-position: 5px center; }
-.btn.excel {
-  padding-left: 30px;
-  background-image: url("../img/excel-icon.png");
-  background-repeat: no-repeat;
-  background-position: 5px center; }
-.btn.pdf {
-  padding-left: 30px;
-  background-image: url("../img/pdf-icon.png");
-  background-repeat: no-repeat;
-  background-position: 5px center; }
-.btn.disabled {
-  background-color: #dea300;
-  border-color: #dea300; }
-
 .btn-default {
   color: black;
   background-color: #9fdbf0;
-  border-color: #9fdbf0; }
+  border-color: #59aeca;
+  box-shadow: -1px 1px 1px 0px #dff2f8 inset; }
   .btn-default:hover {
-    background-color: #92cce0;
-    border-color: #92cce0; }
+    box-shadow: -1px 1px 1px 0px #dff2f8 inset;
+    border-color: #59aeca;
+    background-color: #9fdbf0;
+    color: black; }
+  .btn-default:focus, .btn-default:active {
+    box-shadow: -1px 1px 4px 0px rgba(58, 34, 11, 0.2) inset, 0px 4px 4px 0px rgba(17, 98, 124, 0.5) inset;
+    border-color: #22a4ce;
+    background-color: #24b0dd; }
 
 .btn-primary {
   color: black;
+  border-color: #dea300;
   background-color: #feba00;
-  border-color: #feba00; }
+  box-shadow: 0 1px 1px #fde091 inset, 0 -1px 4px rgba(255, 255, 255, 0.05) inset; }
   .btn-primary:hover {
-    background-color: #dea300;
-    border-color: #dea300; }
+    color: black;
+    border-color: #c69100;
+    background-color: #e99f00;
+    box-shadow: 0 1px 1px #f8d991 inset, 0 -1px 4px rgba(255, 255, 255, 0.05) inset; }
+  .btn-primary:focus, .btn-primary:active {
+    color: black;
+    border-color: #dd8b17;
+    background-color: #e39000;
+    box-shadow: 0 3px 6px #aa6a01 inset, 0 -1px 4px rgba(0, 0, 0, 0.05) inset; }
+
+.btn {
+  padding: 0px 13px;
+  height: 36px;
+  line-height: 36px; }
+  .btn.btn-sm {
+    height: 22px;
+    line-height: 22px; }
+  .btn.disabled {
+    color: rgba(0, 0, 0, 0.5);
+    border-color: #d5d5d5;
+    background-color: #e3e3e3;
+    box-shadow: 0 1px 1px #f8f6ee inset, 0 -1px 4px rgba(255, 255, 255, 0.05) inset;
+    cursor: default; }
+  .btn.print {
+    padding-left: 30px;
+    background-image: url(../img/print-icon.png);
+    background-repeat: no-repeat;
+    background-position: 5px center; }
+  .btn.excel {
+    padding-left: 30px;
+    background-image: url("../img/excel-icon.png");
+    background-repeat: no-repeat;
+    background-position: 5px center; }
+  .btn.pdf {
+    padding-left: 30px;
+    background-image: url("../img/pdf-icon.png");
+    background-repeat: no-repeat;
+    background-position: 5px center; }
 
 /*** Itemtree
 ************************************************/
