--- a/src/main/webapp/html/partials/organisaatioSelector.html
+++ b/src/main/webapp/html/partials/organisaatioSelector.html
@@ -20,7 +20,7 @@
 
 
 <div ng-controller="OrganisaatioTreeController">
-    <button type="button" class="button small" ng-model="orgSelector" ng-show="!orgSelector" ng-click="show()"><i
+    <button type="button" class="btn btn-sm btn-default" ng-model="orgSelector" ng-show="!orgSelector" ng-click="show()"><i
             class="fa fa-plus"></i> Organisaatio
     </button>
     <div ng-show="orgSelector">
