--- a/src/main/webapp/html/partials/valintaryhmaSelector.html
+++ b/src/main/webapp/html/partials/valintaryhmaSelector.html
@@ -14,7 +14,7 @@
 </script>
 
 <input type="text" class="search" placeholder="Suodata valintaryhmiä" id="text" ng-model="domain.search.q">
-<a class="button small" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
+<a class="btn btn-sm btn-default" ng-click="domain.expandTree()"> <i class="fa fa-expand"></i> Avaa puu</a>
 <br />
 <div class="valintaryhmaSelector">
     <ol class="treelist collapsible">
