--- a/src/main/webapp/css/virkailija.css
+++ b/src/main/webapp/css/virkailija.css
@@ -1376,12 +1376,23 @@ label, .label {
   font-size: 18px;
   text-align: super; }
 
+/*** Form horizontal
+************************************************/
+.form-horizontal .form-group .control-content {
+  padding-top: 12px; }
+
 /*** Virkailija-table-1 
 ************************************************/
 .virkailija-table-1 {
   border-spacing: 1px;
   border-collapse: separate; }
-  .virkailija-table-1 tr td,
+  .virkailija-table-1 tr td {
+    line-height: 2.3em;
+    padding: 0 0.5em;
+    vertical-align: middle;
+    text-align: center; }
+    .virkailija-table-1 tr td.rightorientedcolumn {
+      text-align: right; }
   .virkailija-table-1 tr th {
     line-height: 2.3em;
     padding: 0 0.5em;
@@ -1775,6 +1786,13 @@ table.dropmenu-table {
 
 /*** Modal
 ************************************************/
+.modal-dialog .modal-header {
+  background-image: url(../img/texture-45dg-lines-gray.gif);
+  background-repeat: repeat; }
+.modal-dialog .modal-footer {
+  background-image: url(../img/texture-45dg-lines-gray.gif);
+  background-repeat: repeat; }
+
 .modal-backdrop {
   position: fixed;
   left: 0;
@@ -2683,6 +2701,3 @@ div.tilaParial {
 
 .selectlist li a:hover {
   text-decoration: none; }
-
-.form-horizontal .form-group .control-content {
-  padding-top: 12px; }
