valintaperusteiden navigaation parantelua

--- a/src/main/webapp/common/css/virkailija.css
+++ b/src/main/webapp/common/css/virkailija.css
@@ -1049,7 +1049,8 @@ body {
 
 a {
   text-decoration: none;
-  color: #149ecb; }
+  color: #149ecb;
+  cursor: pointer; }
 
 table {
   border-collapse: normal; }
@@ -2547,75 +2548,6 @@ div.tilaParial {
   -o-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   -ms-box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5);
   box-shadow: 0 0 50px 0 rgba(0, 0, 0, 0.5); }
-
-/*** Tabsheet styles for angular-implementation
-************************************************/
-.tabsheet-container .nav-tabs {
-  position: relative;
-  padding: 0;
-  margin: 0; }
-  .tabsheet-container .nav-tabs li {
-    border: 1px solid #bdbdbd;
-    list-style-type: none;
-    display: inline-block;
-    background: #c6c6c6;
-    background: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(#c6c6c6));
-    background: -webkit-linear-gradient(top, whitesmoke, #c6c6c6);
-    background: -moz-linear-gradient(top, whitesmoke, #c6c6c6);
-    background: -ms-linear-gradient(top, whitesmoke, #c6c6c6);
-    background: -o-linear-gradient(top, whitesmoke, #c6c6c6);
-    background: linear-gradient(top, whitesmoke, #c6c6c6);
-    -webkit-box-shadow: 1px 1px 5px white inset, -1px -1px 5px white inset;
-    -moz-box-shadow: 1px 1px 5px white inset, -1px -1px 5px white inset;
-    -o-box-shadow: 1px 1px 5px white inset, -1px -1px 5px white inset;
-    -ms-box-shadow: 1px 1px 5px white inset, -1px -1px 5px white inset;
-    box-shadow: 1px 1px 5px white inset, -1px -1px 5px white inset;
-    position: relative;
-    margin-right: 5px;
-    top: 1px; }
-    .tabsheet-container .nav-tabs li:hover {
-      background: whitesmoke;
-      background: -webkit-gradient(linear, left top, left bottom, from(#c6c6c6), to(whitesmoke));
-      background: -webkit-linear-gradient(top, #c6c6c6, whitesmoke);
-      background: -moz-linear-gradient(top, #c6c6c6, whitesmoke);
-      background: -ms-linear-gradient(top, #c6c6c6, whitesmoke);
-      background: -o-linear-gradient(top, #c6c6c6, whitesmoke);
-      background: linear-gradient(top, #c6c6c6, whitesmoke); }
-    .tabsheet-container .nav-tabs li:active {
-      background: whitesmoke;
-      background: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(whitesmoke));
-      background: -webkit-linear-gradient(top, whitesmoke, whitesmoke);
-      background: -moz-linear-gradient(top, whitesmoke, whitesmoke);
-      background: -ms-linear-gradient(top, whitesmoke, whitesmoke);
-      background: -o-linear-gradient(top, whitesmoke, whitesmoke);
-      background: linear-gradient(top, whitesmoke, whitesmoke); }
-    .tabsheet-container .nav-tabs li.active {
-      background: white;
-      background: -webkit-gradient(linear, left top, left bottom, from(whitesmoke), to(white));
-      background: -webkit-linear-gradient(top, whitesmoke, white);
-      background: -moz-linear-gradient(top, whitesmoke, white);
-      background: -ms-linear-gradient(top, whitesmoke, white);
-      background: -o-linear-gradient(top, whitesmoke, white);
-      background: linear-gradient(top, whitesmoke, white);
-      border-bottom: 1px solid white; }
-    .tabsheet-container .nav-tabs li a {
-      display: block;
-      color: #3e3e3e;
-      padding: 0 20px;
-      line-height: 36px;
-      outline: none;
-      -webkit-text-shadow: 1px 1px 1px white;
-      -moz-text-shadow: 1px 1px 1px white;
-      -o-text-shadow: 1px 1px 1px white;
-      -ms-text-shadow: 1px 1px 1px white;
-      text-shadow: 1px 1px 1px white; }
-.tabsheet-container .tab-content .tab-pane {
-  display: none;
-  background: white;
-  border: 1px solid #bdbdbd;
-  padding: 10px; }
-  .tabsheet-container .tab-content .tab-pane.active {
-    display: block; }
 
 /*** Tabsheet styles for 
 ************************************************/
